# library-develop

./: .gitignore  README.md  pyproject.toml
discussion/: README.md
discussion/000.検討用MindMap/: 001.一括申請の機能説明に何を書くべきか.xmind  002.受付の「機能説明」に何を書くべきか.xmind  003.パターン処理の「機能説明」に何を書くべきか.xmind  004.反映・送信処理の「機能説明」に何を書くべきか.xmind  100.共通の初期化処理に何を書くべきか.xmind  AI駆動開発.xmind  やること・定義.xmind  テスト分析.xmind  テスト指標.md  一括申請機能要件.xmind  体制案.xmind  要件の分類.xmind
discussion/001.プロンプトFIX化/: 000.西川さんプロンプト.md  002.機能設計お題目.md  003.技術設計お題目.md  099.カレンダーフォーマット定義.md  101.プロンプト（機能設計個別）_一括申請.md  102.一括申請UML.pu  103.一括申請asciidoc版.adoc  104.一括申請asciidoc版.adoc  105.一括申請asciidoc版.adoc  106.一括申請asciidoc版.adoc  107.一括申請asciidoc版.adoc  201.プロンプト（機能設計個別）_受付.md  202.受付_UML.pu  203.受付asciidoc版.adoc  204.受付asciidoc版.adoc  301.プロンプト（機能設計個別）_パターン処理.md  302.パターン処理UML.pu  303.パターン処理asciidoc.adoc  304.パターン編集asciidoc版.adoc  401.プロンプト（機能設計個別）_反映送信.md  402.反映・送信処理UML.pu  403.反映・送信処理asciidoc版.adoc  404.反映・送信処理asciidoc版.adoc  405.反映・送信処理asciidoc版.adoc  500.機能設計書(全体)asciidoc.adoc  500.機能設計書プロンプト.md  600.技術設計書プロンプト.md  600．技術設計書asciidoc.adoc  601．技術設計書asciidoc(gemini版).adoc  602.技術設計書中間生成物.md  ボツ---001.業務要件定義.md  ボツ---004.システムデザイン.md  反映送信処理定義（工藤くん版）.txt
discussion/002.プロンプト試行錯誤/: 002-asciidoc形式への出力は可能.txt  002-フロー図としてアクティビティ図を作成するオンは可能.txt  002-プロンプト.txt  factory_facade.pu  【一括申請】アプリケーションデザイン.pu  【一括申請】アプリケーションデザイン.txt  【一括申請】アプリケーションデザイン_v1.1.adoc  【一括申請】アプリケーションデザイン_v1.2.adoc  【一括申請】アプリケーションデザイン_v1.adoc  テストイベント生成考察.txt  テスト計画検証  プロジェクト文書作成.txt  プロジェクト文書作成プロンプト.txt  リファレンスシステム定義と非正規化起因の課題（西川さんの作品）.txt  リファレンス基本設計書作成の課程.md  便利にClaude3を使う.txt  案１.pu  業務要件表の作り方.txt  機能設計サンプル（一括申請）.txt
discussion/003.何かしらの案/: Validaion一覧.xlsx  体制ディスカッション.md  整合性チェック一覧.xlsx
discussion/100.資料集/: FlowAnalysisAggressive.html  README.md  やること・定義.xmind  コードレビューで期待することjpeg  サンプルコンフィギュレーション.properties  ブレスト.txt  ルールドキュメント.html  問題点.xmind  延長で考えること（スタート）.xmind
discussion/200.実装ルール案/: 部品は例外を返すべきなのかNoneなどを返すべきなのか.txt
discussion/777.課題検討/: Claude-備考欄解析関数-2.0ディスカッション.md  Claude3-備考欄整合性チェック-Developing a Remarks Parser in Python.md  check-command-implementations.py  claude3_FactoryFacade部品構成開発ガイドライン_壁打ち結果.md  claude3_Validation構成_壁打ち結果.md  claude3_layoutバリデータとポリフォーフィズム.md  claude3_package構成.md  claude3_validator実装をapply適用で見直し-2.md  claude3_validator実装をapply適用で見直し-3.md  claude3_validator実装をapply適用で見直し-4.md  claude3_validator実装をapply適用で見直し-5-modelサンプル.md  claude3_validator実装をapply適用で見直し-6.md  claude3_validator実装をapply適用で見直し.md  claude3_リファレンス用語定義一覧.adoc  claude3_反映処理壁打ち-1.md  claude3_受付パターン編集_デザインリファクタリング-20240530.md  claude3_技術設計書_一括申請アーキテクチャ-1.md  claude3_用語定義.md  claude3_編集部品でのエラー発生ハンドリング_壁打ち結果.md  claude3_設計文書asciidoc形式保守ルール_壁打ち結果.md  claude3_詳細設計記述ルール.adoc  command-pattern-plantuml.txt  list-toml.txt  toml-loaded-structure.dict  updated-blacklist-toml.txt  アプリケーションリグレで運用-検討プロンプト.md  ガイドライン-一括申請フェーズ実装.md  ガイドライン-受付フェーズ実装.md  タスク分解とスピードアップ指導.md  テスト-テストコード生成プロンプト.md  テーマに応じて部長なりきりプロンプトを生成するプロンプト.md  リトライ-反映・一括処理・送信処理の立て直し.md  レイアウト-パターン編集出力-update.md  レイアウト-リファレンステーブルレイアウト.md  レイアウト-一括申請統合レイアウト-update.md  レイアウト-人事入力フォーム-update.md  レイアウト-国企入力フォーム-update.md  レイアウト-変更情報テーブル（受付アウトプット）-update.md  レイアウト-関連入力フォーム-update.md  交渉文言検討.md  (+22 more)
discussion/888.おもしろプロンプト/: {あなたの職業}ChatGPT活用法ガイド.md  人生シミュレーター.md  戦略コンサルタント納品ドキュメント定義書.xlsx  要件定義書を出力させる.md
discussion/999.poetry_memo/: readme.md
discussion/999.新人学習資料/: 1.1-1.updated-python-basics-page.html  1.1-2.updated-python-basics-page.html  1.2.python-control-structures-complete.html  1.3-1.python-functions-modules.html  1.3-2.python-functions-modules-continued.html  10-1.python-concurrency-async.html  10-2.python-concurrency-async-quiz-continued.html  11-1.python-performance-optimization.html  11-2.python-performance-optimization-quiz-continued.html  12-1.project-specific-git-cicd-complete.html  12-2.project-specific-git-cicd-complete-continued.html  13-1.code-quality-metrics.html  13-2.code-quality-metrics-quiz-continued.html  14-1.git-commit-messages-extended.html  14-2.git-commit-message-guide.html  2.-1.python-oop-complete.html  2.-2.python-oop-complete-continued.html  3-1.python-file-io.html  3-2.python-file-io-continued.html  4-1.python-design-patterns-complete.html  4-2.python-design-patterns-complete-continued.html  5-2.python-data-processing-pandas-complete-continued.html  5.1-python-data-processing-pandas-complete.html  7-1.python-tdd-pytest.html  (+9 more)
library-dev/: README.md  pyproject.toml
(+356 files in other folders)
